// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SubGenerator jooq of jooq JHipster blueprint > run > should succeed 1`] = `
{
  ".jhipster/EntityA.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "README.jooq.md": {
    "stateCleared": "modified",
  },
  "jooq.xml": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/EntityAJOOQRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/EntityAJOOQRepositoryImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-jooq.yml": {
    "stateCleared": "modified",
  },
}
`;

exports[`SubGenerator jooq of jooq JHipster blueprint > with gradle > should succeed 1`] = `
{
  ".jhipster/EntityA.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "README.jooq.md": {
    "stateCleared": "modified",
  },
  "gradle/jooq.gradle": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/EntityAJOOQRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/EntityAJOOQRepositoryImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/application-jooq.yml": {
    "stateCleared": "modified",
  },
}
`;
